--- a/templates/result.html
+++ b/templates/result.html
@@ -87,7 +87,7 @@
 		</tr>
 		</tr>
 		</p>
-		<p>Press the link, relax, drink a cup of coffee and your MP3 file will be ready! ~ <button  id = "fun" class = "button buttondl" onclick = "change()"><img src="/static/images/hoangbutton.png" alt="Record button" width="20" height="20"></button></p>
+		<p>Press the link, relax, your MP3 file will be ready! ~ <button  id = "fun" class = "button buttondl" onclick = "change()"><img src="/static/images/hoangbutton.png" alt="Record button" width="20" height="20"></button></p>
 <script src="/static/js/fun.js"></script>
 		
 		<form class = "getdownload" action="/download" method="post">
